@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + vanish():void
}

abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    # shootStrategy:ShootStrategyInterface
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp, int shootNum, int power, ShootStrategyInterface shootStrategy)
    + {abstract} shoot():List<BaseBullet>
 }

 abstract class AbstractEnemyAircraft
 {
    # direction:int
    - abstractPropFactory:AbstractPropFactory
    + AbstractEnemyAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + AbstractEnemyAircraft(int locationX, int locationY, int speedX, int speedY, int hp, int shootNum, int power, ShootStrategyInterface shootStrategy)
    + forward():void
    + generateProp():AbstractProp
 }

class BaseBullet
{
    - power:int
    + BaseBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
}

abstract class AbstractEnemyAircraftFactory
{
    + {abstract} createEnemyAircraft(int hp, int speedY):AbstractEnemyAircraft
}

abstract class AbstractProp
{
    - startTime:int
    + AbstractProp(int locationX, int locationY)
    + {abstract} operate():void
    + {abstract} timeLimitExceeded(int currentTime):boolean
    + forward():void
}

abstract class AbstractPropFactory
{
    + {abstract} createProp(int locationX, int locationY):AbstractProp
}

AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet
AbstractFlyingObject <|-- AbstractProp

AbstractAircraft <|-- HeroAircraft
AbstractAircraft <|-- AbstractEnemyAircraft
AbstractEnemyAircraft <|-- MobEnemy
AbstractEnemyAircraft <|-- BossEnemy
AbstractEnemyAircraft <|-- EliteEnemy

AbstractEnemyAircraftFactory <|-- BossEnemyFactory
AbstractEnemyAircraftFactory <|-- EliteEnemyFactory
AbstractEnemyAircraftFactory <|-- MobEnemyFactory

AbstractEnemyAircraft <|.. AbstractEnemyAircraftFactory
MobEnemy <|.. MobEnemyFactory
BossEnemy <|.. BossEnemyFactory
EliteEnemy <|.. EliteEnemyFactory

AbstractPropFactory <|-- PropBloodFactory
AbstractPropFactory <|-- PropBombFactory
AbstractPropFactory <|-- PropBulletFactory

AbstractPropFactory <|.. AbstractEnemyAircraft
PropBomb <|.. PropBombFactory
PropBullet <|.. PropBulletFactory
PropBlood <|.. PropBloodFactory

BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

AbstractProp <|-- PropBlood
AbstractProp <|-- PropBomb
AbstractProp <|-- PropBullet

class HeroAircraft {
    - shootNum:int
    - power:int
    - direction:int
    - {static} heroAircraft:HeroAircraft
    - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp, int shootNum, int power, ShootStrategyInterface shootStrategy)
    + {static} getHeroAircraft():HeroAircraft
    + forward():void
    + shoot():List<BaseBullet>
}

class BossEnemy {
    - shootNum:int
    - power:int
    + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp, int shootNum, int power, ShootStrategyInterface shootStrategy)
    + forward():void
    + shoot():List<BaseBullet>
}

class EliteEnemy {
    - shootNum:int
    - power:int
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp, int shootNum, int power, ShootStrategyInterface shootStrategy)
    + shoot():List<BaseBullet>
    + generateProp():AbstractProp
}

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + shoot():List<BaseBullet>
    + update():void
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
    + update():void
}

class BossEnemyFactory {
    + createEnemyAircraft(int hp, int speedY):AbstractEnemyAircraft
}

class EliteEnemyFactory {
    + createEnemyAircraft(int hp, int speedY):AbstractEnemyAircraft
}

class MobEnemyFactory {
    + createEnemyAircraft(int hp, int speedY):AbstractEnemyAircraft
}

class PropBlood {
    - returnBlood:int
    + PropBlood(int locationX, int locationY)
    + operate():void
    + timeLimitExceeded(int currentTime):boolean
}

class PropBomb {
    - subscriber: List<Subscriber>
    + PropBomb(int locationX, int locationY)
    + operate(): void
    + timeLimitExceeded(int currentTime):boolean
    + addSubscriber(Subscriber obj): void
    + removeSubscriber(Subscriber obj): void
    + notifyAllSubscribers(): void
}

class PropBullet {
    - increaseShootNum:int
    - increasePower:int
    - limitTime:int
    + PropBullet(int locationX, int locationY)
    + operate():void
    + timeLimitExceeded(int currentTime):boolean
    + setInvalid():void
}

class PropBloodFactory{
    + createProp(int locationX, int locationY):AbstractProp
}

class PropBombFactory{
    + createProp(int locationX, int locationY):AbstractProp
}

class PropBulletFactory{
    + createProp(int locationX, int locationY):AbstractProp
}

@enduml